--- a/css/main.css
+++ b/css/main.css
@@ -25,24 +25,25 @@ header{
 	justify-content: space-around;
 	width: 100%;
 	align-items: center;
-	height: 80px;
-	padding-top: 50px;
-	padding-bottom: 60px;
+	//height: 80px;
+	margin-bottom: 20px;
+	//padding-bottom: 0px;
 	position: fixed;
 	z-index: 300;
 	//background: black;
 
 }
 
+
 .cabeceraNoHeader{
-	padding-top: 160px;
+	padding-top: 200px;
 
 }
 
 .logo{
-	width: 150px;
+	width: 130px;
 	margin-left: 35px;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 
 .espacioNav{
@@ -69,6 +70,10 @@ header{
 	font-size: 1em;
 }
 
+#botonMenu{
+	display: none;
+}
+
 .espacioTitulo{
 	display: flex;
 	justify-content: center;
@@ -85,6 +90,7 @@ header{
 	font-size: 20px;
 	margin-top: 50px;
 	text-shadow: 1px 1px #999;
+	text-align: center;
 }
 
 #botonInicio{
@@ -147,7 +153,7 @@ header{
 .caracteristica1-1{
 	display: flex;
 	align-items: center;
-	width: 900px;
+	width: 50%;
 	margin: auto;
 
 	
@@ -224,4 +230,121 @@ footer .columna ul li a:hover{
 	margin-bottom: 20px;
 	display: flex;
 	justify-content: center;
+	text-align: center;
+}
+
+@media (max-width: 1350px){
+
+	.caracteristica1-1{
+		width: 90%;
+	}
+}
+
+@media (max-width: 790px){
+
+	header{
+		flex-wrap: wrap;
+	}
+	.espacioLogo{
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	#botonMenu{
+		display: block;
+		color: white;
+		font-size: 40px;
+		margin-top: 50px;
+		margin-right: 100px;
+		cursor: pointer;
+	}
+
+	.espacioNav{
+		display: none;
+	}
+
+
+
+	nav{
+		width: 100%;
+	}
+	.itemMenu{
+		width: 100%;
+	}
+	.itemMenu a{
+		display: block;
+	}
+
+	.itemMenu a:hover{
+		color: #5BCAF3;
+		background: grey;
+	}
+}
+
+@media (max-width: 650px){
+
+	.titulo{
+		font-size: 35px;
+	}
+
+	.subtitulo{
+		font-size: 18px;
+	}
+
+
+.imagenResponsive{
+		width: 250px;
+}
+
+	.caracteristica1-1{
+		flex-wrap: wrap;
+	}
+}
+
+
+
+
+@media (max-width: 550px){
+	.titulo{
+		font-size: 25px;
+	}
+
+	.subtitulo{
+		font-size: 19px;
+	}
+}
+
+@media (max-width: 450px){
+	.espacioImagen1{
+		font-size: 12px;
+	}
+
+	.espacioImagen1 h1{
+		font-size: 18px;
+	}
+
+	#botonMenu{
+		margin-right: 30px;
+		margin-top: 35px;
+		font-size: 30px;
+	}
+
+	.logo{
+		width: 80px;
+	}
+}
+
+@media (max-width: 350px){
+
+	body{
+		font-size: 13px;
+	}
+	.titulo{
+		font-size: 25px;
+	}
+
+	.subtitulo{
+		font-size: 15px;
+	}
 }
